Another scrollbar fix
Going back to a smaller and more boring scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,10 @@
 .site-content {
-  width: calc(100% - 10px);
+  width: calc(100% - 4px);
 }
 
 .site-scrollbar {
   z-index: 40;
-  width: 10px;
+  width: 4px;
   height: 100vh;
   position: fixed;
   top: 0;
