--- a/src/app/scrollbar/scrollbar.component.scss
+++ b/src/app/scrollbar/scrollbar.component.scss
@@ -8,21 +8,21 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 36px;
+    height: 18px;
     padding-left: 1px;
     transition-duration: 0.5s;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /* display: flex; */
+    /* align-items: center; */
+    /* justify-content: center; */
 
-    .value {
-      margin: 0;
-      padding: 0;
-      display: block;
-      transform:rotate(-90deg);
-      font-size: 10px;
-      font-weight: bold;
-    }
+    /* .value { */
+    /*   margin: 0; */
+    /*   padding: 0; */
+    /*   display: block; */
+    /*   transform:rotate(-90deg); */
+    /*   font-size: 10px; */
+    /*   font-weight: bold; */
+    /* } */
   }
 }
